test/tests/RangeTypeMismatch2.expected
RangeTypeMismatch2.frost:4:22: error: range endpoints must be value types, but found 'frost.core.Immutable'
1 error
