test/tests/RangeTypeMismatch2.frost
class RangeTypeMismatch2 {
    @class
    method main() {
        for i in 255 .. "Hello" by -1 {
            Console.printLine(i)
        }
    }
}